# concurrent-programming-ecommerce

./: Cargo.toml  README.md
pedidos/: ecom1.txt  pedidos_ecom1.txt  pedidos_tienda1.txt  pedidos_tienda2.txt  tienda1.txt  tienda2.txt  zonas.txt
src/: constants.rs  ecom_actor.rs  error.rs  lib.rs  main.rs  orders.rs  shop.rs  shop_actor.rs  states.rs
src/ecom/: connect_shops.rs  connected_shops.rs  connection_handling.rs  conneted_shops.rs  ecom_actor.rs  foward_order.rs  mod.rs  process_ecom_orders.rs  process_order.rs
src/messages/: deliver_purchase.rs  ecom_purchase.rs  ecommerce_purchase.rs  local_purchase.rs  mod.rs  print.rs  process_order.rs  process_orders.rs
src/shop/: deliver_purchase.rs  local_purchase.rs  mod.rs  online_purchase.rs  process_local_orders.rs  shop_actor.rs  shop_server_side.rs
tests/: integration_tests.rs
tests/tiendas_test/: tienda_test_1.txt
tiendas/: tienda1.txt  tienda2.txt
