[package]
name = "concurrentes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.1"
actix-codec = "0.5.1"
actix-rt = "2.9.0"
rand = "0.8.5"
tokio = "1.34.0"
tokio-stream = { version = "^0.1.14", features = ["io-util"] }
futures = "0.3.28"

[[bin]]
name = "shop"
src = "src/shop.rs"

[[bin]]
name = "ecom"
src = "src/ecom.rs"

